[tool.poetry]
name = "liquid-resilience"
version = "0.1.0"
description = ""
authors = ["Brett Botto <brett@digopp.group>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
slither-analyzer = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
